tests/e2e/semantics/when_output_invalid2.error
Error: syntax error in story at line 3, column 31

3|        when b listen path:"/" as req, b
                                    ^^^^^^

E0107: Only one output is allowed for `when` blocks.
