tests/e2e/semantics/when_output_invalid2.story
a = 0
http server as b
    when b listen path:"/" as req, b
        a = req
